kong-gateway-sample-full.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kong-prod-gateway
  namespace: kong
spec:
  # References the Kong Gateway Operator GatewayClass
  gatewayClassName: kong
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    hostname: "example.com"
    tls:
      mode: Terminate
      certificateRefs:
      - group: ""
        kind: Secret
        name: kong-prod-tls
    allowedRoutes:
      namespaces:
        from: Same
---
# using ACM certificates
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kong-prod-gateway
  namespace: kong
spec:
  gatewayClassName: kong
  infrastructure:
    annotations:
      # Configure AWS target tracking for Kong pods
      service.beta.kubernetes.io/aws-load-balancer-type: "external"
      service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "instance"
      # Wire the target ACM certificate
      service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:us-east-1:123456789012:certificate/your-acm-uuid-here"
      service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
  listeners:
  - name: https-via-acm
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchExpressions:
          - key: kubernetes.io/metadata.name
            operator: In
            values: ["backend-apps", "frontend-apps"]
